deploy/salesforce/objects/Complaint__c/Complaint__c.object-meta.xml
<CustomObject>
    <description>Quality complaint source record used by QMS GenAI to generate RCA and CAPA drafts.</description>
    <label>Complaint</label>
    <nameField>
        <displayFormat>CMP-{00000}</displayFormat>
        <label>Complaint Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>