deploy/salesforce/objects/Complaint__c/fields/Issue_Title__c.field-meta.xml
<CustomField>
    <fullName>Issue_Title__c</fullName>
    <label>Issue Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>