deploy/salesforce/objects/Complaint__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>120</length>
    <type>Text</type>
</CustomField>