deploy/salesforce/objects/Complaint__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>BioPharma</fullName><default>true</default><label>BioPharma</label></value>
            <value><fullName>Medical Device</fullName><default>false</default><label>Medical Device</label></value>
            <value><fullName>Pharma</fullName><default>false</default><label>Pharma</label></value>
            <value><fullName>Diagnostics</fullName><default>false</default><label>Diagnostics</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>