deploy/salesforce/objects/Complaint__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Investigation In Progress</fullName><default>false</default><label>Investigation In Progress</label></value>
            <value><fullName>RCA Complete</fullName><default>false</default><label>RCA Complete</label></value>
            <value><fullName>CAPA Required</fullName><default>false</default><label>CAPA Required</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>