deploy/salesforce/objects/Complaint__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>complaint</fullName><default>true</default><label>complaint</label></value>
            <value><fullName>deviation</fullName><default>false</default><label>deviation</label></value>
            <value><fullName>nonconformance</fullName><default>false</default><label>nonconformance</label></value>
            <value><fullName>adverse event</fullName><default>false</default><label>adverse event</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>